<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <POU Name="FB_MqttLightDiscovery" Id="{e838779f-4c08-477f-aa69-fe0c4f3677af}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_MqttLightDiscovery EXTENDS FB_MqttDeviceDiscoveryBase
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	stConfig : ST_MqttLightConfiguration;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Property Name="Component" Id="{890d4baf-9b7c-45f1-9eb6-e6dd064d139f}">
      <Declaration><![CDATA[PROPERTY PROTECTED Component : STRING(30)]]></Declaration>
      <Get Name="Get" Id="{b8d496a3-2e5a-418a-99c8-0afea46ea387}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Component := 'light';]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Method Name="ConfigToJson" Id="{dd60e862-3412-40fb-8713-20da07d4089e}">
      <Declaration><![CDATA[METHOD  ConfigToJson : STRING(1000)
VAR_INPUT
END_VAR
VAR
	fbJsonWriter : FB_JsonSaxWriter;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[fbJsonWriter.ResetDocument();
fbJsonWriter.StartObject();
fbJsonWriter.AddKeyString(key := 'cmd_t', value := stConfig.command_topic);
fbJsonWriter.AddKeyString(key := 'stat_t', value := stConfig.state_topic);
fbJsonWriter.AddKeyString(key := 'uniq_id', value := stConfig.unique_id);
fbJsonWriter.AddKeyString(key := 'name', value := stConfig.name);
THIS^.DevInfoToJson(rJsonWriter := fbJsonWriter);
fbJsonWriter.EndObject();
fbJsonWriter.CopyDocument(pDoc := ConfigToJson, nDoc := 1000);]]></ST>
      </Implementation>
    </Method>
    <Property Name="Configuration" Id="{28606575-3785-46d2-b1d7-ca887d660ce1}">
      <Declaration><![CDATA[PROPERTY Configuration : ST_MqttLightConfiguration]]></Declaration>
      <Get Name="Get" Id="{3e3bc15d-64d9-4969-8d21-38ab9b86f779}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[Configuration := THIS^.stConfig;
]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{81793631-04d3-4bdf-8628-0078c8095124}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[this^.stConfig := Configuration;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_MqttLightDiscovery">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_MqttLightDiscovery.Component.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_MqttLightDiscovery.ConfigToJson">
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="3" />
      <LineId Id="20" Count="0" />
      <LineId Id="12" Count="2" />
    </LineIds>
    <LineIds Name="FB_MqttLightDiscovery.Configuration.Get">
      <LineId Id="2" Count="0" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_MqttLightDiscovery.Configuration.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>